--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,7 +1,25 @@
 // Начните писать стили здесь
 @import "settings.scss";
+
+@mixin page-heading-style {
+  font-weight: 400;
+  font-size: 36px;
+  line-height: 36px;
+}
+
+@mixin button {
+  margin: 0;
+  font-family: $main-font-1;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  background-color: $main-color-2;
+  color: $main-color-1;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
 @import "fonts.scss";
-@import "mixin.scss";
 @import "blocks/body.scss";
 @import "blocks/example.scss";
 @import "blocks/footer.scss";
