--- a/source/sass/blocks/additional-gift.scss
+++ b/source/sass/blocks/additional-gift.scss
@@ -1,14 +1,15 @@
 .additional__gift {
-  margin: 0 auto;
-  padding: 35px 20px;
-}
-
-.additional__gift-container {
-  width: 280px;
+  width: 100%;
   height: 290px;
+  margin: 0 auto;
   background-color: $main-color-2;
   background-image: url("../../img/gift-background.jpg");
   background-size: cover;
+
+  @media (min-width: $desktop-width) {
+    width: 245px;
+    margin: 0;
+  }
 }
 
 .additional__gift-title {
