--- a/source/sass/blocks/additional.scss
+++ b/source/sass/blocks/additional.scss
@@ -1,6 +1,21 @@
-.additional__container {
+.additional {
   margin: 0 auto;
-  padding: 25px 20px 0;
+  padding: 25px 20px 35px;
+
+  @media (min-width: $tablet-width) {
+    padding: 0 31px 76px 30px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding: 0 110px 86px;
+  }
+}
+
+.additional__container {
+  @media (min-width: $desktop-width) {
+    display: flex;
+    justify-content: space-between;
+  }
 }
 
 .additional__title {
@@ -9,17 +24,41 @@
   font-size: 24px;
   line-height: 24px;
   color: $text-color-2;
+
+  @media (min-width: $tablet-width) {
+    padding: 0 0 0 37px;
+  }
 }
 
 .additional__products {
-  margin: 0;
+  margin: 0 0 35px;
   padding: 0;
   list-style-type: none;
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: 69px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin: 0;
+  }
 }
 
 .additional__products-item {
   margin: 0;
   padding: 13px 0 19px;
+
+  @media (min-width: $tablet-width) {
+    padding: 26px 38px 28px;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    row-gap: 22px;
+  }
+
+  @media (min-width: $desktop-width) {
+    min-width: 896px;
+  }
 }
 
 .additional__products-item-title {
@@ -29,10 +68,25 @@
   line-height: 16px;
   color: $text-color-4;
   text-transform: uppercase;
+
+  @media (min-width: $desktop-width) {
+    margin-right: auto;
+  }
 }
 
 .additional__property {
   margin-bottom: 15px;
+  display: flex;
+  justify-content: space-between;
+
+  @media (min-width: $tablet-width) {
+    justify-content: flex-end;
+    column-gap: 49px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-right: 40px;
+  }
 }
 
 .additional__property-title,
@@ -40,4 +94,12 @@
   margin: 0;
   font-family: $main-font-2;
   line-height: 14px;
+}
+
+.additional__property-btn {
+  width: 100%;
+
+  @media (min-width: $desktop-width) {
+    width: 244px;
+  }
 }
