--- a/source/sass/blocks/body.scss
+++ b/source/sass/blocks/body.scss
@@ -1,5 +1,5 @@
 .body {
-  width: 100%;
+  width: 320px;
   max-width: 1440px;
   display: flex;
   flex-direction: column;
@@ -10,4 +10,12 @@
   line-height: 18px;
   background-color: $main-color-1;
   color: $text-color-1;
+
+  @media (min-width: $tablet-width) {
+    width: 769px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 1440px;
+  }
 }
