--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -1,7 +1,20 @@
 .header {
-  padding: 10px 20px 0;
+  position: relative;
+  max-height: fit-content;
+  padding: 10px 20px 17px;
+  display: flex;
+  justify-content: space-between;
+
+  @media (min-width: $tablet-width) {
+    padding: 0 30px 0 31px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding: 53px 110px 0;
+  }
 }
 
 .header__logo {
-  padding-bottom: 17px;
+  max-width: fit-content;
+  max-height: 38px;
 }
