--- a/source/sass/blocks/map.scss
+++ b/source/sass/blocks/map.scss
@@ -1,18 +1,42 @@
 .map {
+  position: relative;
   margin: 0 auto;
-  padding: 26px 0 0;
+  padding: 0;
 
   &--alter-background {
     background-color: $main-color-3;
   }
+
+  @media (min-width: $desktop-width) {
+    padding: 0;
+  }
 }
 
-.map-banner {
-  margin: 0 20px 26px;
+.map__banner {
+  padding: 26px 20px 26px;
+  display: flex;
+  justify-content: space-between;
+
+  @media (min-width: $tablet-width) {
+    padding: 56px 70px;
+  }
+
+  @media (min-width: $desktop-width) {
+    position: absolute;
+    top: 95px;
+    left: 110px;
+    width: 565px;
+    height: 198px;
+    margin: 0;
+    padding: 56px 60px 56px 80px;
+    background-color: $main-color-1;
+    z-index: 1;
+  }
 }
 
 .map__banner-title {
   margin: 0;
+  max-width: 164px;
   font-weight: 400;
   font-size: 16px;
   line-height: 20px;
@@ -22,7 +46,15 @@
 
 .map__banner-address {
   margin: 0;
+  max-width: 160px;
   font-family: $main-font-2;
   font-size: 14px;
   line-height: 20px;
+  text-align: right;
+}
+
+.map__frame {
+  width: 100%;
+  height: 400px;
+  background-image: url("../../img/map.png");
 }
