--- a/source/sass/blocks/additional-gift.scss
+++ b/source/sass/blocks/additional-gift.scss
@@ -2,22 +2,58 @@
   width: 100%;
   height: 290px;
   margin: 0 auto;
+  padding: 59px 0 43px 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
   background-color: $main-color-2;
-  background-image: url("../../img/gift-background.jpg");
+  background-image: url("../../img/catalog/gift-background.jpg");
   background-size: cover;
+  background-repeat: no-repeat;
+
+  &::before {
+    width: 78px;
+    height: 80px;
+    content: "";
+    background-image: url("../../img/catalog/icon-gift-mobile.svg");
+    background-size: contain;
+    background-repeat: no-repeat;
+
+    @media (min-width: $tablet-width) {
+      background-image: url("../../img/catalog/icon-gift-tablet.svg");
+      width: 80px;
+      height: 82px;
+    }
+  }
+
+  @media (min-width: $tablet-width) {
+    padding: 57px 124px 61px 77px;
+    flex-direction: row;
+  }
 
   @media (min-width: $desktop-width) {
     width: 245px;
+    padding: 56px 0 42px;
     margin: 0;
+    flex-direction: column;
   }
 }
 
 .additional__gift-title {
+  margin: 0;
   max-width: 162px;
-  margin: 0 auto;
   font-family: $main-font-2;
   font-size: 16px;
   line-height: 20px;
   color: $main-color-1;
   text-align: center;
+
+  @media (min-width: $tablet-width) {
+    text-align: start;
+  }
+
+  @media (min-width: $desktop-width) {
+    text-align: center;
+  }
 }
