--- a/source/sass/blocks/additional.scss
+++ b/source/sass/blocks/additional.scss
@@ -1,17 +1,34 @@
 .additional {
-  margin: 0 auto;
-  padding: 25px 20px 35px;
+  position: relative;
+  margin: 0;
+  padding: 25px 0 35px;
+
+  &::before {
+    position: absolute;
+    top: 40px;
+    right: 0;
+    z-index: -1;
+    width: 70%;
+    height: 2px;
+    content: "";
+    background-color: $main-color-2;
+
+    @media (min-width: $tablet-width) {
+      top: 22px;
+      width: 100%;
+    }
+  }
 
   @media (min-width: $tablet-width) {
-    padding: 0 31px 76px 30px;
+    padding: 0 0 76px;
   }
 
   @media (min-width: $desktop-width) {
-    padding: 0 110px 86px;
+    padding: 0 0 86px;
   }
 }
 
-.additional__container {
+.additional__inner {
   @media (min-width: $desktop-width) {
     display: flex;
     justify-content: space-between;
@@ -20,13 +37,24 @@
 
 .additional__title {
   margin: 0 0 36px;
+  padding: 0 21px 0 0;
+  width: fit-content;
   font-weight: 400;
   font-size: 24px;
   line-height: 24px;
   color: $text-color-2;
+  background-color: $main-color-1;
 
   @media (min-width: $tablet-width) {
-    padding: 0 0 0 37px;
+    margin-bottom: 80px;
+    padding: 0 36px 0 37px;
+    font-size: 36px;
+    line-height: 36px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-left: -40px;
+    padding: 0 35px 0 40px;
   }
 }
 
@@ -47,17 +75,28 @@
 .additional__products-item {
   margin: 0;
   padding: 13px 0 19px;
+  border-top: 1px solid $extra-color-2;
+
+  &:last-of-type {
+    border-bottom: 1px solid $extra-color-2;
+  }
 
   @media (min-width: $tablet-width) {
-    padding: 26px 38px 28px;
+    padding: 25px 37px 26px;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
     row-gap: 22px;
+    border: 1px solid $extra-color-2;
+    border-bottom: none;
   }
 
   @media (min-width: $desktop-width) {
     min-width: 896px;
+    padding: 14px 0 16px;
+    align-items: center;
+    border: none;
+    border-top: 1px solid $extra-color-2;
   }
 }
 
@@ -68,6 +107,12 @@
   line-height: 16px;
   color: $text-color-4;
   text-transform: uppercase;
+
+  @media (min-width: $tablet-width) {
+    margin: 0;
+    font-size: 20px;
+    line-height: 20px;
+  }
 
   @media (min-width: $desktop-width) {
     margin-right: auto;
@@ -80,12 +125,15 @@
   justify-content: space-between;
 
   @media (min-width: $tablet-width) {
+    margin: 0;
     justify-content: flex-end;
     column-gap: 49px;
   }
 
   @media (min-width: $desktop-width) {
     margin-right: 40px;
+    min-width: 32%;
+    justify-content: space-between;
   }
 }
 
@@ -94,9 +142,20 @@
   margin: 0;
   font-family: $main-font-2;
   line-height: 14px;
+
+  @media (min-width: $tablet-width) {
+    font-size: 16px;
+    line-height: 20px;
+  }
+
+  @media (min-width: $desktop-width) {
+    min-width: 42px;
+  }
 }
 
 .additional__property-btn {
+  padding: 10px 20px;
+  display: block;
   width: 100%;
 
   @media (min-width: $desktop-width) {
