--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -1,23 +1,30 @@
-.catalog__container {
+.catalog {
   margin: 0;
-  padding: 27px 20px 0;
+  padding: 27px 0 0 0;
+  overflow: hidden;
 
   @media (min-width: $tablet-width) {
-    padding: 65px 31px 68px 30px;
+    padding: 65px 0 68px;
   }
 
   @media (min-width: $desktop-width) {
-    padding: 74px 110px 75px;
+    padding: 74px 0 75px;
   }
 }
 
 .catalog__title {
   @include page-heading-style;
   margin: 0 0 41px;
+  padding: 0;
   color: $text-color-2;
 
   @media (min-width: $tablet-width) {
+    @include heading-tablet;
     margin-bottom: 163px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-bottom: 165px;
   }
 }
 
@@ -27,33 +34,68 @@
   list-style-type: none;
 
   @media (min-width: $tablet-width) {
-    display: flex;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
     column-gap: 60px;
     row-gap: 142px;
-    flex-wrap: wrap;
   }
 
   @media (min-width: $desktop-width) {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     column-gap: 80px;
     row-gap: 144px;
   }
 }
 
 .catalog__item {
-  max-width: fit-content;
+  position: relative;
+  width: 100%;
   margin: 0;
+  padding: 19px 20px 25px;
 
-  padding: 19px 0 25px;
+  &::before {
+    position: absolute;
+    top: 0;
+    left: -20px;
+    height: 1px;
+    width: calc(100vw + 20px);
+    background-color: #ebebeb;
+    content: "";
+  }
+
+  &:last-of-type {
+    &::after {
+      position: absolute;
+      top: calc(100% - 1px);
+      left: -20px;
+      height: 1px;
+      width: calc(100vw + 20px);
+      background-color: #ebebeb;
+      content: "";
+    }
+
+    @media (min-width: $tablet-width) {
+      &::after {
+        display: none;
+      }
+    }
+  }
 
   @media (min-width: $tablet-width) {
-    min-width: 324px;
+    width: 324px;
     padding: 0 36px 39px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: center;
     column-gap: 60px;
+    background-color: $main-color-3;
+    border: none;
+
+    &::before,
+    &::after {
+      display: none;
+    }
   }
 
   @media (min-width: $desktop-width) {
@@ -61,6 +103,20 @@
     width: 245px;
     padding: 0 30px 40px 35px;
     column-gap: 80px;
+  }
+
+  &--more {
+    padding-top: 25px;
+
+    @media (min-width: $tablet-width) {
+      padding-top: 52px;
+      background-color: $main-color-1;
+      border: 2px solid $main-color-3;
+    }
+
+    @media (min-width: $desktop-width) {
+      padding-top: 51px;
+    }
   }
 }
 
@@ -70,15 +126,43 @@
   grid-template-columns: 1fr 1fr;
 
   @media (min-width: $tablet-width) {
+    width: 100%;
     margin-bottom: 33px;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 0;
   }
+
+  &--more {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+
+    &::before {
+      width: 30px;
+      height: 30px;
+      margin-bottom: 23px;
+      content: "";
+      background-image: url("../../img/catalog/icon-plus-more.svg");
+      background-position: center;
+      background-repeat: no-repeat;
+      object-fit: contain;
+
+      @media (min-width: $tablet-width) {
+        width: 60px;
+        height: 60px;
+        margin-bottom: 49px;
+        background-image: url("../../img/catalog/icon-plus-more-tablet.svg");
+      }
+    }
+  }
 }
 
 .catalog__item-title {
+  max-width: 76px;
   margin: 0 0 18px;
   grid-column: 2;
   font-weight: 400;
@@ -87,9 +171,28 @@
   color: $text-color-4;
   text-transform: uppercase;
 
+  @media (min-width: $tablet-width) {
+    margin-bottom: 21px;
+    max-width: 155px;
+    font-size: 20px;
+    line-height: 24px;
+    text-align: center;
+  }
+
+  @media (min-width: $desktop-width) {
+    line-height: 21px;
+  }
+
   &--more {
+    max-width: fit-content;
     margin-bottom: 8px;
     color: $text-color-3;
+
+    @media (min-width: $tablet-width) {
+      max-width: 150px;
+      line-height: 22px;
+      margin-bottom: 23px;
+    }
   }
 }
 
@@ -101,31 +204,123 @@
     grid-row: 1/ span 2;
 
     @media (min-width: $tablet-width) {
-      margin: -30% 0 34px;
+      margin: -73px 0 34px;
+    }
+
+    @media (min-width: $desktop-width) {
+      margin: -80px 0 46px;
+    }
+  }
+}
+
+.catalog__item-img {
+  @media (min-width: $tablet-width) {
+    object-fit: contain;
+    height: 200px;
+  }
+
+  @media (min-width: $desktop-width) {
+    height: 196px;
+  }
+}
+
+.catalog__properties {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+
+  @media (min-width: $tablet-width) {
+    width: 100%;
+  }
+}
+
+.catalog__properties-item {
+  display: flex;
+  justify-content: space-between;
+
+  @media (min-width: $tablet-width) {
+    padding: 6px 0 8px;
+    border-bottom: 1px solid $extra-color-2;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-bottom: 9px;
+  }
+
+  &:nth-child(2n) {
+    @media (min-width: $tablet-width) {
+      padding: 5px 0 6px;
+    }
+
+    @media (min-width: $desktop-width) {
+      padding: 5px 0 7px;
+    }
+  }
+
+  &:first-of-type {
+    @media (min-width: $tablet-width) {
+      padding-top: 0;
     }
   }
 }
 
 .catalog__properties-title,
 .catalog__properties-subtitle {
+  margin: 0;
+  padding: 0;
   font-family: $main-font-2;
   font-size: 12px;
   line-height: 16px;
+
+  @media (min-width: $tablet-width) {
+    font-size: 16px;
+  }
 }
 
 .catalog__item-description {
-  &--more {
-    margin: 0 0 21px;
-    font-family: $main-font-2;
-    font-size: 12px;
-    line-height: 16px;
+  margin: 0 0 21px;
+  font-family: $main-font-2;
+  font-size: 12px;
+  line-height: 16px;
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: auto;
+    max-width: 165px;
+    font-size: 16px;
+    line-height: 18px;
+    text-align: center;
   }
 }
 
 .catalog__item-btn {
+  @include button;
+  padding: 10px 20px;
+  display: block;
+  width: 100%;
+
+  @media (min-width: $tablet-width) {
+    margin: 0 1px 0 3px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin: 0 8px 0 4px;
+  }
+
   &--more {
-    @include button;
     background-color: $main-color-3;
     color: $text-color-1;
+
+    @media (min-width: $desktop-width) {
+      margin-left: 3px;
+    }
+
+    &:hover {
+      background-color: #ebebeb;
+    }
+
+    &:active {
+      background-color: #ebebeb;
+      color: rgba($text-color-1, 0.3);
+    }
   }
 }
