--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -1,20 +1,46 @@
 .example {
-  margin: 0 auto;
-  padding: 25px 20px 40px;
+  padding: 25px 0 40px;
   background-color: $example-background-color;
 
   @media (min-width: $tablet-width) {
     padding: 43px 30px 100px 31px;
   }
 
+  @media (min-width: $tablet-width) {
+    position: relative;
+    padding: 43px 0 100px;
+    background-color: transparent;
+
+    &::before {
+      position: absolute;
+      top: 57%;
+      left: 0;
+      z-index: -1;
+      width: 100%;
+      height: 43%;
+      content: "";
+      background-color: $example-background-color;
+    }
+  }
+
   @media (min-width: $desktop-width) {
-    padding: 0 110px 75px;
+    padding: 0 0 75px;
+
+    &::before {
+      top: 23%;
+      height: 77%;
+    }
+  }
+}
+
+.example__cont {
+  @media (min-width: $desktop-width) {
     display: flex;
     justify-content: space-between;
   }
 }
 
-.example__cont {
+.example__cont-content {
   @media (min-width: $desktop-width) {
     max-width: 436px;
     display: flex;
@@ -29,22 +55,46 @@
   font-size: 36px;
   line-height: 40px;
   color: $text-color-2;
+
+  @media (min-width: $tablet-width) {
+    @include heading-tablet;
+    margin-bottom: 63px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-bottom: 146px;
+  }
 }
 
 .example__description {
   margin: 0 0 20px;
   font-family: $main-font-2;
+
+  @media (min-width: $tablet-width) {
+    @include text-tablet;
+    margin-bottom: 54px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-bottom: 69px;
+    max-width: 433px;
+  }
 }
 
 .example__properties {
-  margin: 0 0 20px;
+  margin: 0 0 34px;
   display: flex;
   justify-content: space-between;
 
   @media (min-width: $tablet-width) {
+    margin: 0;
     max-width: fit-content;
     justify-content: flex-start;
     column-gap: 42px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-bottom: 60px;
   }
 }
 
@@ -52,22 +102,62 @@
   font-size: 24px;
   line-height: 24px;
   text-align: center;
+  text-transform: uppercase;
   color: $text-color-2;
+
+  @media (min-width: $tablet-width) {
+    font-size: 30px;
+    line-height: 37px;
+  }
 }
 
 .example__properties-subtitle {
-  margin: 0;
+  position: absolute;
+  top: 80%;
+  left: 0;
+  right: 0;
+  transform: translateX(-1px);
+  z-index: 1;
+  width: 87px;
+  margin: 0 auto;
+  padding: 0 0 0 6px;
   font-family: $main-font-2;
   font-size: 12px;
   line-height: 12px;
+  background-color: $example-background-color;
   text-align: center;
+
+  @media (min-width: $tablet-width) {
+    top: 90%;
+    transform: translateX(0);
+    padding: 0 9px 0 8px;
+    width: fit-content;
+    font-size: 14px;
+    line-height: 14px;
+    background-color: $main-color-1;
+  }
+
+  @media (min-width: $desktop-width) {
+    background-color: $example-background-color;
+  }
 }
 
 .example__properties-item {
-  max-width: 124px;
+  position: relative;
+  z-index: 0;
+  min-width: 124px;
+  min-height: 56px;
+  padding: 13px 0 0 0;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  border: 1px solid $extra-color-2;
+  border-radius: 3px;
 
   @media (min-width: $tablet-width) {
-    max-width: 162px;
+    padding: 14px 0 0 0;
+    min-width: 162px;
+    min-height: 72px;
   }
 }
 
@@ -75,7 +165,7 @@
   margin-bottom: 20px;
 
   @media (min-width: $tablet-width) {
-    margin-bottom: 100px;
+    margin-bottom: 104px;
     display: flex;
     justify-content: space-between;
   }
@@ -97,10 +187,107 @@
 
   @media (min-width: $tablet-width) {
     margin: 0;
+    padding: 11px 0 0 0;
     max-width: 175px;
+    display: flex;
+    flex-direction: column;
+    row-gap: 9px;
+    font-size: 20px;
+    line-height: 20px;
+    text-align: end;
   }
 
   @media (min-width: $desktop-width) {
+    padding: 0;
     max-width: fit-content;
+    flex-direction: row;
+    row-gap: 0;
+    column-gap: 63px;
   }
+}
+
+.example__interactive {
+  position: relative;
+  display: flex;
+  justify-content: center;
+
+  @media (min-width: $tablet-width) {
+    margin: 0 auto;
+    width: 560px;
+    height: 512px;
+  }
+}
+
+.example__interactive-item {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  margin: auto 0;
+  object-fit: contain;
+  object-position: left center;
+
+  &--before {
+    clip-path: polygon(0 0, 50% 0, 50% 100%, 0% 100%);
+  }
+
+  &--after {
+    position: absolute;
+    right: 0;
+    clip-path: polygon(50% 0, 100% 0, 100% 100%, 50% 100%);
+    width: 100%;
+    object-position: right center;
+  }
+}
+
+.example__interactive-btn {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-20px);
+  width: 40px;
+  height: 100%;
+  z-index: 3;
+  margin: 0;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+
+  &::before {
+    position: absolute;
+    top: 0;
+    left: 18px;
+    z-index: 2;
+    width: 4px;
+    height: 100%;
+    content: "";
+    background-color: $button-icon-color-2;
+    border: none;
+    border-radius: 2px;
+  }
+}
+
+.example__interactive-btn:hover::before {
+  background-color: $main-color-2;
+}
+
+.example__interactive-btn:active::before {
+  background-color: rgba($button-active-color-1, 0.6);
+}
+
+.example__interactive-btn svg {
+  position: relative;
+  z-index: 3;
+  color: $button-icon-color-2;
+  stroke: $button-icon-color-2;
+}
+
+.example__interactive-btn:hover svg {
+  color: $main-color-2;
+  stroke: $main-color-2;
+}
+
+.example__interactive-btn:active svg {
+  color: rgba($button-active-color-1, 0.6);
+  stroke: rgba($button-active-color-1, 0.6);
 }
