--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -1,30 +1,88 @@
 .footer {
   margin: 0;
-  padding: 20px;
+  padding: 40px 0;
+  background-color: $main-color-3;
+
+  @media (min-width: $tablet-width) {
+    padding: 55px 0;
+  }
+}
+
+.footer__container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  row-gap: 20px;
-  background-color: $main-color-3;
 
   @media (min-width: $tablet-width) {
-    padding: 55px 30px;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-between;
   }
+}
 
-  @media (min-width: $desktop-width) {
-    padding: 66px 110px;
+.footer__section {
+  padding-bottom: 16px;
+  margin-bottom: 16px;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  border-bottom: 1px solid #d9d9d9;
+
+  &:last-of-type {
+    margin: 0;
+    padding: 0;
+    border: none;
+  }
+
+  @media (min-width: $tablet-width) {
+    margin: 0;
+    padding: 0;
+    width: fit-content;
+    border: none;
   }
 }
 
-.footer__copyright {
-  display: block;
+.footer__logo-link {
   margin: 0;
-  padding: 20px 0;
+  padding: 0 0 4px;
+  width: fit-content;
+  display: flex;
+
+  @media (min-width: $tablet-width) {
+    padding: 0;
+  }
+}
+
+.footer__logo-img {
+  color: $text-color-3;
+}
+
+.footer__logo-link:hover .footer__logo-img {
+  color: #3e3e3e;
+}
+
+.footer__logo-link:active .footer__logo-img {
+  color: #6b6b6b;
+}
+
+.footer__copyright {
+  @media (min-width: $tablet-width) {
+    min-width: 168px;
+  }
+}
+
+.footer__copyright-link {
+  padding: 4px 0 0;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   text-decoration: none;
+
+  &:active {
+    opacity: 0.3;
+  }
 
   @media (min-width: $tablet-width) {
     padding: 0;
@@ -38,30 +96,44 @@
   color: $text-color-1;
 }
 
-.footer__logo-link {
-  margin: 0;
-  padding: 20px 0;
-
-  @media (min-width: $tablet-width) {
-    padding: 0;
-  }
+.footer__copyright-img {
+  color: $button-icon-color-2;
 }
 
-.footer__social {
-  margin: 0;
-  padding: 20px 0;
+.footer__copyright-link:hover .footer__copyright-img {
+  color: $main-color-2;
+}
 
-  @media (min-width: $tablet-width) {
-    padding: 0;
-  }
+.footer__copyright-link:active .footer__copyright-img {
+  color: $main-color-2;
 }
 
 .footer__social-list {
   margin: 0;
   padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 24px;
   list-style-type: none;
 }
 
 .footer__social-item-link {
+  padding: 4px 0;
+  display: flex;
+  color: $button-icon-color-2;
   text-decoration: none;
+
+  @media (min-width: $tablet-width) {
+    padding: 0;
+  }
+}
+
+.footer__social-item-link:hover svg {
+  color: $main-color-2;
+}
+
+.footer__social-item-link:active svg {
+  color: $main-color-2;
+  opacity: 0.3;
 }
