--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -1,20 +1,67 @@
 .header {
   position: relative;
   max-height: fit-content;
-  padding: 10px 20px 17px;
-  display: flex;
-  justify-content: space-between;
+  margin: 0;
+  padding: 10px 0 0;
+  overflow-x: clip;
+  overflow-y: visible;
+
+  &::after {
+    position: absolute;
+    top: calc(100% - 1px);
+    left: -20px;
+    width: calc(100vw + 20px);
+    height: 1px;
+    background-color: $extra-color-1;
+    content: "";
+  }
+
+  &--index {
+    &::after {
+      display: none;
+    }
+  }
 
   @media (min-width: $tablet-width) {
-    padding: 0 30px 0 31px;
+    padding: 0;
+
+    &::after {
+      display: none;
+    }
   }
 
   @media (min-width: $desktop-width) {
-    padding: 53px 110px 0;
+    padding: 53px 0 0;
   }
 }
 
-.header__logo {
+.header__container {
+  @media (min-width: $tablet-width) {
+    display: flex;
+    justify-content: space-between;
+  }
+}
+
+.header__logo-link {
+  display: block;
+  margin-bottom: 16px;
   max-width: fit-content;
   max-height: 38px;
+  padding-right: 40px;
+
+  &--index {
+    margin-bottom: 17px;
+  }
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: 0;
+  }
+
+  &:hover {
+    opacity: 0.8;
+  }
+
+  &:active {
+    opacity: 0.6;
+  }
 }
