--- a/source/sass/blocks/main-banner.scss
+++ b/source/sass/blocks/main-banner.scss
@@ -1,25 +1,26 @@
 .main-banner {
   position: relative;
-  margin: 0 auto;
-  padding: 27px 20px 20px;
+  margin: 0;
+  padding: 27px 0 0;
+  display: flex;
 
   &::before {
     content: "";
     position: absolute;
     top: 0;
-    left: 0;
+    right: 0;
     width: 100%;
     height: 302px;
     background-color: $main-color-2;
-    background-image: url("../../img/index-background-desktop.jpg");
+    background-image: url("../../img/main/index-background-desktop.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     z-index: -1;
   }
 
   @media (min-width: $tablet-width) {
-    min-height: 440px;
-    padding: 62px 30px 0 31px;
+    padding: 62px 0 0;
+    min-height: 874px;
 
     &::before {
       display: none;
@@ -28,43 +29,57 @@
 
   @media (min-width: $desktop-width) {
     position: static;
-    padding: 29px 110px 54px;
+    padding: 110px 0 0;
+    min-height: 578px;
 
     &::before {
-      top: 0;
-      right: 0;
-      left: 50%;
-      width: 720px;
       display: block;
+      width: 50%;
+      min-height: 694px;
     }
   }
 }
 
 .main-banner__container {
+  min-height: 100%;
+  padding: 0;
+
   @media (min-width: $tablet-width) {
     padding: 0 0 0 90px;
   }
 
   @media (min-width: $desktop-width) {
     padding: 0 0 0 80px;
+    display: grid;
+    grid-template-areas: ". i" ". i" ". i";
+    grid-auto-rows: min-content;
+    grid-template-columns: auto 1fr;
   }
 }
 
 .main-banner__title {
   @include page-heading-style;
   margin: 0 auto 25px;
+  height: fit-content;
   color: $main-color-1;
   text-align: center;
 
   @media (min-width: $tablet-width) {
-    max-width: 414px;
+    @include heading-tablet;
+    max-width: 420px;
     margin: 0 0 41px;
     color: $text-color-2;
+    text-align: start;
+  }
+
+  @media (min-width: $desktop-width) {
+    grid-column: 1;
   }
 }
 
 .main-banner__description {
   margin: 0 0 10px;
+  height: fit-content;
   line-height: 14px;
   color: $main-color-1;
   text-align: center;
@@ -75,16 +90,41 @@
   }
 
   @media (min-width: $tablet-width) {
-    margin: 0 0 49px;
+    margin: 0 0 30px;
+    max-width: 420px;
+    font-size: 20px;
+    line-height: 20px;
     color: $text-color-2;
     text-align: start;
+
+    &:last-of-type {
+      margin-bottom: 49px;
+    }
+  }
+
+  @media (min-width: $desktop-width) {
+    grid-column: 1;
   }
 }
 
 .main-banner__btn {
   @include button;
+  max-width: 100%;
+  height: fit-content;
+  padding: 11px;
+  display: block;
   font-size: 14px;
   line-height: 18px;
+
+  @media (min-width: $tablet-width) {
+    padding: 14px 26px;
+    max-width: 244px;
+    font-size: 20px;
+  }
+
+  @media (min-width: $desktop-width) {
+    grid-column: 1;
+  }
 }
 
 .main-banner__img {
@@ -93,16 +133,18 @@
 
   @media (min-width: $tablet-width) {
     position: absolute;
-    top: 200px;
+    top: 260px;
     left: 0;
     right: 0;
     margin: 0 auto;
+    z-index: -1;
   }
 
   @media (min-width: $desktop-width) {
-    top: 32px;
-    left: 40%;
-    right: 0;
-    margin: 0;
+    position: relative;
+    top: 0;
+    left: 0;
+    grid-area: i;
+    margin: 0 0 0 -46px;
   }
 }
