--- a/source/sass/blocks/map.scss
+++ b/source/sass/blocks/map.scss
@@ -1,7 +1,7 @@
 .map {
   position: relative;
-  margin: 0 auto;
   padding: 0;
+  overflow: hidden;
 
   &--alter-background {
     background-color: $main-color-3;
@@ -12,13 +12,18 @@
   }
 }
 
+.map__container {
+  position: relative;
+  overflow: visible;
+}
+
 .map__banner {
-  padding: 26px 20px 26px;
+  padding: 26px 0 26px;
   display: flex;
   justify-content: space-between;
 
   @media (min-width: $tablet-width) {
-    padding: 56px 70px;
+    padding: 56px 40px;
   }
 
   @media (min-width: $desktop-width) {
@@ -36,25 +41,53 @@
 
 .map__banner-title {
   margin: 0;
+  min-width: 139px;
   max-width: 164px;
   font-weight: 400;
   font-size: 16px;
   line-height: 20px;
   color: $text-color-3;
   text-transform: uppercase;
+
+  @media (min-width: $tablet-width) {
+    font-size: 20px;
+    line-height: 26px;
+  }
 }
 
 .map__banner-address {
   margin: 0;
+  width: fit-content;
   max-width: 160px;
   font-family: $main-font-2;
   font-size: 14px;
   line-height: 20px;
-  text-align: right;
+  text-align: start;
+
+  @media (min-width: $tablet-width) {
+    display: flex;
+    flex-direction: column;
+    row-gap: 20px;
+    font-size: 16px;
+    line-height: 20px;
+    text-align: end;
+  }
 }
 
 .map__frame {
-  width: 100%;
+  margin: 0 0 0 -20px;
+  display: block;
+  width: 100vw;
   height: 400px;
   background-image: url("../../img/map.png");
+  border: none;
+
+  @media (min-width: $tablet-width) {
+    margin-left: -30px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-left: calc(-50vw + 50%);
+    width: calc(100vw);
+  }
 }
