--- a/source/sass/blocks/request.scss
+++ b/source/sass/blocks/request.scss
@@ -1,46 +1,57 @@
-.request__container {
-  margin: 0 auto;
-  padding: 27px 20px 32px;
+.request {
+  margin: 0;
+  padding: 27px 0 0;
+  overflow-x: clip;
 
   @media (min-width: $tablet-width) {
-    padding: 65px 30px 72px;
+    padding: 65px 0 0;
   }
 
   @media (min-width: $desktop-width) {
-    padding: 74px 110px 82px;
+    padding: 74px 0 0;
   }
 }
 
 .request__title {
   @include page-heading-style;
   margin: 0 0 37px;
+  padding: 0;
   color: $text-color-2;
 
   @media (min-width: $tablet-width) {
-    padding-left: 39px;
+    @include heading-tablet;
+    margin: 0 37px 54px 39px;
   }
 
   @media (min-width: $desktop-width) {
-    padding: 0;
+    margin: 0 0 56px;
   }
 }
 
 .request__subtitle {
   margin: 0 0 10px;
-  padding-right: 54px;
+  padding: 0;
+  max-width: 226px;
   color: $text-color-2;
   text-transform: uppercase;
 
-  &:last-of-type {
-    margin-bottom: 39px;
-  }
-
   @media (min-width: $tablet-width) {
-    padding-left: 40px;
+    margin: 0 0 20px 40px;
+    max-width: 323px;
+    font-size: 20px;
+    line-height: 30px;
   }
 
   @media (min-width: $desktop-width) {
-    padding: 0;
+    margin: 0 0 30px;
+  }
+
+  &:last-of-type {
+    margin-bottom: 39px;
+
+    @media (min-width: $tablet-width) {
+      margin-bottom: 66px;
+    }
   }
 }
 
@@ -57,7 +68,8 @@
   }
 
   @media (min-width: $desktop-width) {
-    padding: 0 0 69px;
+    margin: 0 0 69px;
+    padding: 0;
     flex-direction: row;
     justify-content: space-between;
     column-gap: 80px;
@@ -78,9 +90,19 @@
 }
 
 .request__form-fieldset {
+  position: relative;
   margin: 0;
   padding: 0;
   border: none;
+
+  @media (min-width: $tablet-width) {
+    padding-right: 37px;
+    padding-left: 40px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding: 0;
+  }
 
   &--cat-data {
     padding-bottom: 24px;
@@ -91,22 +113,57 @@
   }
 
   &--course-type {
-    padding: 22px 0 19px;
+    position: relative;
+    padding-top: 22px;
+    padding-bottom: 19px;
+    margin-bottom: 26px;
+
+    &::before {
+      position: absolute;
+      top: 1px;
+      left: -20px;
+      width: calc(100vw + 20px);
+      height: 1px;
+      background-color: #d9d9d9;
+      content: "";
+    }
+
+    &::after {
+      position: absolute;
+      top: calc(100% - 1px);
+      left: -20px;
+      width: calc(100vw + 20px);
+      height: 1px;
+      background-color: #d9d9d9;
+      content: "";
+    }
+
+    @media (min-width: $tablet-width) {
+      margin: 0;
+      padding: 0;
+
+      &::before,
+      &::after {
+        display: none;
+      }
+    }
 
     @media (min-width: $desktop-width) {
+      padding: 0;
       min-width: 568px;
     }
   }
 
   &--contacts {
-    padding: 26px 0 24px;
+    padding-bottom: 24px;
 
     @media (min-width: $tablet-width) {
-      padding: 0 36px 65px 38px;
+      padding-top: 0;
+      padding-bottom: 65px;
     }
 
     @media (min-width: $desktop-width) {
-      padding: 0 0 67px 0;
+      padding-bottom: 67px;
     }
   }
 
@@ -114,11 +171,12 @@
     padding-bottom: 23px;
 
     @media (min-width: $tablet-width) {
-      padding: 0 37px 65px 39px;
+      padding-top: 0;
+      padding-bottom: 65px;
     }
 
     @media (min-width: $desktop-width) {
-      padding: 0 0 67px 0;
+      padding-bottom: 67px;
     }
   }
 
@@ -126,40 +184,102 @@
     padding-bottom: 34px;
 
     @media (min-width: $tablet-width) {
-      padding: 0 135px 0 40px;
+      padding: 0 135px 72px 40px;
     }
 
     @media (min-width: $desktop-width) {
-      padding: 0;
+      padding: 0 0 82px;
+    }
+  }
+
+  &--with-lines {
+    &::before {
+      position: absolute;
+      top: 14px;
+      right: -20px;
+      z-index: -1;
+      width: calc(100vw - 40px);
+      height: 2px;
+      background-color: $main-color-2;
+      content: "";
+
+      @media (min-width: $tablet-width) {
+        top: 22px;
+        right: -100vw;
+        width: 200vw;
+      }
     }
   }
 }
 
 .request__form-title {
   margin: 0;
+  padding-right: 14px;
+  width: fit-content;
+  max-width: 201px;
   font-weight: 400;
   font-size: 24px;
   line-height: 26px;
+  background-color: $main-color-1;
   color: $text-color-2;
+
+  @media (min-width: $tablet-width) {
+    padding-right: 42px;
+    max-width: fit-content;
+    font-size: 36px;
+    line-height: 36px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-right: 40px;
+  }
 
   &--contacts {
     margin-bottom: 35px;
+
+    @media (min-width: $tablet-width) {
+      margin-bottom: 76px;
+    }
   }
 
   &--comment {
+    padding-right: 22px;
     margin-bottom: 38px;
+
+    @media (min-width: $tablet-width) {
+      padding-right: 38px;
+      margin-bottom: 76px;
+    }
   }
 
   &--extra {
+    padding-right: 23px;
     margin-bottom: 34px;
+
+    @media (min-width: $tablet-width) {
+      padding-right: 41px;
+      margin-bottom: 57px;
+    }
+  }
+}
+
+.request__form-fieldset--with-lines .request__form-title {
+  @media (min-width: $tablet-width) {
+    margin-left: - 40px;
+    padding-left: 40px;
   }
 }
 
 .request__form-group {
+  position: relative;
   margin: 0 0 14px 0;
   display: flex;
   align-items: center;
   column-gap: 13px;
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: 20px;
+  }
 
   @media (min-width: $desktop-width) {
     min-width: 570px;
@@ -182,45 +302,213 @@
   }
 }
 
-.request__form-label {
+.request__form-group:hover .request__form-field {
+  border-color: $extra-color-2;
+}
+
+.request__form-text {
+  min-width: fit-content;
   font-size: 16px;
   text-transform: uppercase;
+
+  @media (min-width: $tablet-width) {
+    font-size: 20px;
+    line-height: 30px;
+  }
+}
+
+.request__form-purpose-control {
+  display: flex;
+  align-items: center;
+  column-gap: 15px;
+  cursor: pointer;
+
+  @media (min-width: $tablet-width) {
+    column-gap: 20px;
+  }
+}
+
+
+.request__form-purpose-mark {
+  width: 30px;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid $extra-color-2;
+  border-radius: 50%;
+
+  @media (min-width: $tablet-width) {
+    width: 40px;
+    height: 40px;
+  }
+}
+
+.request__form-purpose-input:checked + .request__form-purpose-mark::before {
+  width: 13px;
+  height: 13px;
+  background-color: $main-color-2;
+  border-radius: 50%;
+  content: "";
+
+  @media (min-width: $tablet-width) {
+    width: 18px;
+    height: 18px;
+  }
+}
+
+.request__form-purpose-control:hover .request__form-purpose-mark {
+  border-color: #bababa;
 }
 
 .request__form-purpose-label {
   font-size: 16px;
   text-transform: uppercase;
   color: $text-color-4;
+
+  @media (min-width: $tablet-width) {
+    font-size: 20px;
+    line-height: 30px;
+  }
+}
+
+.request__form-additional-control {
+  display: flex;
+  align-items: center;
+  column-gap: 16px;
+  cursor: pointer;
+
+  @media (min-width: $tablet-width) {
+    column-gap: 20px;
+  }
 }
 
 .request__form-additional-label {
   font-size: 16px;
   text-transform: uppercase;
   color: $text-color-2;
+
+  @media (min-width: $tablet-width) {
+    font-size: 20px;
+    line-height: 30px;
+  }
+}
+
+
+.request__form-additional-mark {
+  position: relative;
+  width: 30px;
+  height: 30px;
+  border: 1px solid $extra-color-2;
+
+  @media (min-width: $tablet-width) {
+    width: 40px;
+    height: 40px;
+  }
+}
+
+.request__form-additional-input:checked + .request__form-additional-mark::before {
+  position: absolute;
+  top: 8px;
+  left: 6px;
+  width: 18px;
+  height: 14px;
+  background-image: url("../../img/form/checkbox-mark-mobile.svg");
+  background-repeat: no-repeat;
+  background-size: contain;
+  content: "";
+
+  @media (min-width: $tablet-width) {
+    top: 7px;
+    left: 7px;
+    width: 26px;
+    height: 26px;
+    background-image: url("../../img/form/checkbox-mark-tablet.svg");
+  }
+}
+
+.request__form-additional-control:hover .request__form-additional-mark {
+  border-color: #bababa;
 }
 
 .request__form-field {
   width: 100%;
   margin: 0;
+  padding: 13px 19px 12px;
   font-family: $main-font-1;
   font-size: 16px;
+  line-height: 18px;
   color: $text-color-1;
   text-transform: uppercase;
-
-  @media (min-width: $tablet-width) {
-    margin-left: 1px;
-  }
+  border: 1px solid $extra-color-3;
 
   &::placeholder {
     color: $text-color-1;
   }
 
-  &--textarea {
-    margin: 0;
+  @media (min-width: $tablet-width) {
+    padding: 11px 20px;
+    font-size: 20px;
+    line-height: 30px;
+  }
+
+  &--with-icon {
+    padding: 13px 45px 12px 14px;
+
+    @media (min-width: $tablet-width) {
+      padding: 11px 50px 11px 20px;
+    }
+  }
+}
+
+.request__form-icon {
+  position: absolute;
+  top: 12px;
+  right: 15px;
+  color: $text-color-2;
+
+  @media (min-width: $tablet-width) {
+    top: 16px;
+    right: 18px;
+  }
+}
+
+.request__form-field-textarea {
+  margin: 0;
+  padding: 8px 11px 9px 14px;
+  width: 100%;
+  min-height: 150px;
+  font-family: $main-font-1;
+  font-size: 16px;
+  line-height: 18px;
+  color: $text-color-1;
+  border: 1px solid $extra-color-3;
+  text-transform: uppercase;
+  resize: none;
+
+  &:placeholder {
     font-family: $main-font-1;
     font-size: 16px;
+    line-height: 18px;
     color: $text-color-1;
-    text-transform: uppercase;
+
+    @media (min-width: $tablet-width) {
+      padding: 9px 18px;
+      font-size: 20px;
+      line-height: 30px;
+    }
+  }
+
+  @media (min-width: $tablet-width) {
+    margin-left: 1px;
+    padding: 9px 18px;
+    min-height: 174px;
+    font-size: 20px;
+    line-height: 30px;
+  }
+
+  &:hover {
+    border-color: $extra-color-2;
   }
 }
 
@@ -228,10 +516,15 @@
   margin: 0;
   padding: 0;
   list-style-type: none;
+
+  @media (min-width: $tablet-width) {
+    padding: 24px 27px;
+    border: 1px solid $extra-color-3;
+  }
 }
 
 .request__form-additional {
-  margin: 0;
+  margin: 0 0 34px;
   padding: 0;
   display: flex;
   flex-direction: column;
@@ -239,20 +532,23 @@
   list-style-type: none;
 
   @media (min-width: $tablet-width) {
+    margin-bottom: 54px;
     display: grid;
     grid-template-columns: 1fr 1fr;
+    column-gap: 64px;
     row-gap: 32px;
   }
 
   @media (min-width: $desktop-width) {
+    margin-bottom: 61px;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     column-gap: 80px;
-    row-gap: 61px;
+    row-gap: 40px;
   }
 }
 
 .request__form-additional-item {
-  max-width: fit-content;
+  width: 100%;
 }
 
 .request__form-purpose-item {
@@ -264,31 +560,51 @@
 }
 
 .request__form-btn-cont {
-  display: flex;
-  flex-direction: row;
-  gap: 84px;
-  margin: 22px 0 9px;
-
   @media (min-width: $tablet-width) {
-    margin-bottom: 0;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    column-gap: 64px;
+    row-gap: 32px;
+  }
+
+  @media (min-width: $desktop-width) {
+    grid-template-columns: 2fr 2fr;
+    column-gap: 84px;
+    row-gap: 40px;
   }
 }
 
 .request__form-btn {
+  @include button;
+  margin: 0 0 21px;
+  padding: 10px 20px;
+  width: 100%;
+  border: none;
+
   @media (min-width: $tablet-width) {
     margin: 0 0 0 1px;
+    padding: 13px 26px;
+    font-size: 20px;
+    line-height: 26px;
   }
 }
 
 .request__form-caption {
   max-width: fit-content;
-  margin: 0;
+  margin: 0 auto;
   font-family: $main-font-2;
   line-height: 16px;
   color: $text-color-2;
 
   @media (min-width: $tablet-width) {
-    min-width: 128px;
+    margin: 0;
     padding-left: 2px;
+    font-size: 16px;
+    text-align: start;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding: 0;
   }
 }
