--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -2,7 +2,9 @@
 @import "settings.scss";
 @import "fonts.scss";
 @import "blocks/mixins.scss";
+@import "blocks/visually-hidden";
 @import "blocks/body.scss";
+@import "blocks/container.scss";
 @import "blocks/example.scss";
 @import "blocks/footer.scss";
 @import "blocks/functions.scss";
