--- a/source/sass/blocks/additional-gift.scss
+++ b/source/sass/blocks/additional-gift.scss
@@ -8,9 +8,13 @@
   justify-content: space-between;
   align-items: center;
   background-color: $main-color-2;
-  background-image: url("../../img/catalog/gift-background.jpg");
+  background-image: url("../../img/catalog/gift-background-1x.jpg");
   background-size: cover;
   background-repeat: no-repeat;
+
+  @media (min-resolution: 2dppx) {
+    background-image: url("../../img/catalog/gift-background-2x.jpg");
+  }
 
   &::before {
     width: 78px;
@@ -30,6 +34,11 @@
   @media (min-width: $tablet-width) {
     padding: 57px 124px 61px 77px;
     flex-direction: row;
+    background-image: url("../../img/catalog/gift-background-tablet-1x.jpg");
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../../img/catalog/gift-background-tablet-2x.jpg");
+    }
   }
 
   @media (min-width: $desktop-width) {
@@ -37,6 +46,11 @@
     padding: 56px 0 42px;
     margin: 0;
     flex-direction: column;
+    background-image: url("../../img/catalog/gift-background-desktop-1x.jpg");
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../../img/catalog/gift-background-desktop-2x.jpg");
+    }
   }
 }
 
