--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -216,10 +216,12 @@
 .catalog__item-img {
   @media (min-width: $tablet-width) {
     object-fit: contain;
+    width: 168px;
     height: 200px;
   }
 
   @media (min-width: $desktop-width) {
+    width: 172px;
     height: 196px;
   }
 }
