--- a/source/sass/blocks/additional-gift.scss
+++ b/source/sass/blocks/additional-gift.scss
@@ -32,6 +32,7 @@
   }
 
   @media (min-width: $tablet-width) {
+    max-height: 100%;
     padding: 57px 124px 61px 77px;
     flex-direction: row;
     background-image: url("../../img/catalog/gift-background-tablet-1x.jpg");
@@ -55,6 +56,7 @@
 }
 
 .additional__gift-title {
+  transform: translateX(-1px);
   margin: 0;
   max-width: 162px;
   font-family: $main-font-2;
