--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -94,6 +94,10 @@
   font-size: 16px;
   line-height: 19px;
   color: $text-color-1;
+
+  @media (min-width: $tablet-width) {
+    transform: translateY(1px);
+  }
 }
 
 .footer__copyright-img {
