--- a/source/sass/blocks/nav.scss
+++ b/source/sass/blocks/nav.scss
@@ -26,7 +26,7 @@
 
 .nav__menu {
   position: absolute;
-  top: 66px;
+  top: 64px;
   right: 0;
   z-index: 1;
   width: 100%;
@@ -42,7 +42,7 @@
 
   @media (min-width: $tablet-width) {
     position: static;
-    max-width: 440px;
+    max-width: 446px;
     margin: 0;
     flex-direction: row;
     column-gap: 34px;
@@ -61,7 +61,7 @@
 .nav__menu-item {
   position: relative;
   width: 100%;
-  padding: 21px 0 23px;
+  padding: 11px 0 13px;
   text-align: center;
 
   @media (min-width: $tablet-width) {
@@ -69,7 +69,7 @@
     padding: 0;
 
     &--catalog {
-      margin-right: 2px;
+      margin-right: 4px;
     }
   }
 
@@ -134,7 +134,7 @@
   }
 }
 
-.nav--index.nav--opened .nav__menu-item:first-of-type {
+.nav--opened .nav__menu-item:first-of-type {
   &::before {
     position: absolute;
     top: 0;
@@ -153,22 +153,27 @@
 }
 
 .nav__menu-item-link {
-  padding: 20px;
+  padding: 10px;
+  display: flex;
+  justify-content: center;
   text-decoration: none;
 
   @media (min-width: $tablet-width) {
     position: relative;
-    display: block;
     padding: 18px 0 16px;
 
     &--active::before {
       position: absolute;
-      top: 87.5%;
+      top: 82%;
       right: 0;
       width: 100%;
       height: 2px;
       content: "";
       background-color: $main-color-2;
+
+      @media (min-width: $desktop-width) {
+        top: 84%;
+      }
     }
   }
 
@@ -217,7 +222,7 @@
 
 .nav__toggle {
   position: absolute;
-  top: 14px;
+  top: 13px;
   right: 20px;
   margin: 0;
   padding: 0;
