Правки путей картинок

--- a/source/sass/blocks/request.scss
+++ b/source/sass/blocks/request.scss
@@ -413,7 +413,7 @@
   left: 6px;
   width: 18px;
   height: 14px;
-  background-image: url("../../img/form/checkbox-mark-mobile.svg");
+  background-image: url("/source/img/form/checkbox-mark-mobile.svg");
   background-repeat: no-repeat;
   background-size: contain;
   content: "";
@@ -423,7 +423,7 @@
     left: 7px;
     width: 26px;
     height: 26px;
-    background-image: url("../../img/form/checkbox-mark-tablet.svg");
+    background-image: url("/source/img/form/checkbox-mark-tablet.svg");
   }
 }
 
