--- a/source/sass/blocks/map.scss
+++ b/source/sass/blocks/map.scss
@@ -79,7 +79,7 @@
   display: block;
   width: 100vw;
   height: 400px;
-  background-image: url("../../img/map.png");
+  background-image: url("/source/img/map.png");
   border: none;
 
   @media (min-width: $tablet-width) {
