--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -146,7 +146,7 @@
       height: 30px;
       margin-bottom: 23px;
       content: "";
-      background-image: url("../../img/catalog/icon-plus-more.svg");
+      background-image: url("../img/catalog/icon-plus-more.svg");
       background-position: center;
       background-repeat: no-repeat;
       object-fit: contain;
@@ -155,7 +155,7 @@
         width: 60px;
         height: 60px;
         margin-bottom: 49px;
-        background-image: url("../../img/catalog/icon-plus-more-tablet.svg");
+        background-image: url("../img/catalog/icon-plus-more-tablet.svg");
       }
     }
   }
