--- a/source/sass/blocks/map.scss
+++ b/source/sass/blocks/map.scss
@@ -87,7 +87,7 @@
   display: block;
   width: 100vw;
   height: 362px;
-  background-image: url("../../img/map.png");
+  background-image: url("../img/map.png");
   border: none;
 
   @media (min-width: $tablet-width) {
